[gd_scene load_steps=4 format=2]

[ext_resource path="res://lightning/lightning .gd" type="Script" id=1]
[ext_resource path="res://lightning/lightning_shader.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 91.1782

[node name="lightning " type="Node2D"]
script = ExtResource( 1 )

[node name="effect_1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="effect_1"]
shape = SubResource( 1 )

[node name="effect_2" type="Area2D" parent="."]
position = Vector2( 224.608, 205.899 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="effect_2"]
shape = SubResource( 1 )

[node name="effect_3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="effect_3"]
shape = SubResource( 1 )

[node name="lightning_vfxs" type="Node" parent="."]

[node name="lightning_shader" parent="lightning_vfxs" instance=ExtResource( 2 )]

[node name="lightning_shader2" parent="lightning_vfxs" instance=ExtResource( 2 )]

[node name="lightning_shader3" parent="lightning_vfxs" instance=ExtResource( 2 )]
